--- a/NE100.html
+++ b/NE100.html
@@ -16,15 +16,15 @@
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 1</center></td>
-                <td  style="border:1px solid black;padding:10px"><center><a href="https://www.tinyurl.com/quiz1math117" target = "_blank">https://www.tinyurl.com/quiz1math117</a></center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EeXUPypn1p5Drh2Yqj4O9lgB0yz936STuGzrnRjnxZWi9A?e=gR07a1" target = "_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 2</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Just make the chart</center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 3</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EfyouvSw-lRPmKAI98o_f08BQmB4Xv46iKheYAahCbocBA?e=GqCgm5" target="_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Midterm</center></td>
@@ -32,27 +32,27 @@
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 4</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ESufKgn88fJKtiZmiMIA3ygBd8gEsEDkvHmwPzqDo8Sl9g?e=RKQtB9" target="_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 5</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EXgD9afBgA5NnreDxt8wGJYBoDuVV0Mpe0wEo7ba2m4QHw?e=XwyY4b" target="_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 6</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EXzWPQxR0A1NvzHuQPekndcBxFtqZWcVj1tCyxASvc6rNA?e=RNliAF" target="_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 7</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EZTGnRqUBl1JjrsMz8vcTrcBHxHI8kLY8rjpLdzNmyjJAw?e=rHRP1k" target="_blank">Link</a></center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Quiz 8</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Final</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr></table></center>
             <br>
             <br>
@@ -65,19 +65,19 @@
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab 1</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab 2</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab 3</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab 4</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
                 </tr></table></center>
                 <br><br>
                 <center><table style="width:30%; border:1px solid black;">
@@ -88,28 +88,28 @@
             </tr>
             <tr>
                 <td style="border:1px solid black;padding:10px"><center>Bio-Plastics Day 1</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Bio-Plastics Day 2</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
+                     <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:w:/g/personal/v2sharda_edu_uwaterloo_ca/EWHJM2cHW11AuOeaDcteMU0B5feekW5m0GXT5SeU3EIMrw?e=s2lKaC" target="_blank">Link</a></center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab Skills Session 1</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
+                     <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:w:/g/personal/v2sharda_edu_uwaterloo_ca/EUu0ycTsLRlCkl6M06aif30BTW87G0zFnIgAINBAkmHTrA?e=tOnhpE" target="_blank">Link</a></center></td>
             </tr>
                  <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lab Skills Session 2</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                     <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:w:/g/personal/v2sharda_edu_uwaterloo_ca/ER5SyYs-JrVDvghXhc_q9oUB8MKoTzPjAMcfxrUcfTBoYQ?e=GbB3sc" target="_blank">Link</a></center></td>
+                     <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:w:/g/personal/v2sharda_edu_uwaterloo_ca/EUiuUrpFWC1Oms1hdd-XhiUB6N1YBaQOzPT5J2AoVXvVjg?e=xLGiFJ" target="_blank">Link</a></center></td>
             </tr>
                 <tr>
                 <td style="border:1px solid black;padding:10px"><center>SolidWorks Lab #4</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Unavailable</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Unavailable</center></td>
                     </tr></table></center>
                 <br><br>
                 <center><table style="width:30%; border:1px solid black;">
@@ -119,11 +119,11 @@
             </tr>
                     <tr>
                 <td style="border:1px solid black;padding:10px"><center>Past Final (3rd year)</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
                     </tr>
                     <tr>
                 <td style="border:1px solid black;padding:10px"><center>Cheat Sheet</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
                     </tr>
                 </table></center>
             <br><br>
@@ -134,48 +134,61 @@
             </tr>
                     <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 1</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                        <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EYLkpWjJMY1OpwxhqkOWbwQBdhKptQWxzz6IADxKO8OmMg?e=m1C52b" target="_blank">Link</a></center></td>
                     </tr>
                     <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 2</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                        <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ES81mAcG8tlAir6mpFOfnp0BT-c5aLD1dTC1acAzjSQrCg?e=pyeh1m" target="_blank">Link</a></center></td>
                     </tr>
                     <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 3</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                        <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EaQx6xJZsHRHt6GQV5hOuTgB90GuLPsxr4mvkdyl4rfyXw?e=rgoBOa" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 4</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EQAlMQE_JmBEjdquG6R2424BnQjBsk08vZSVc8etu_wfMQ?e=2xqRxR" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 5</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ESJIemBPzf1MiMGk4exbfkEBD9hrJFwqYvKo05fOaT-_wg?e=1EEdyR" target="_blank">Link</a></center></td>
                     </tr><tr>
+                <td style="border:1px solid black;padding:10px"><center>Lecture 6</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EZPcOWi5GyVIul_2n5dN9qkB2IAlbvqsqtMSnd5qQVHl5w?e=WEe52A" target="_blank">Link</a></center></td>
+                    </tr>
+                    <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 7</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
-                    </tr><tr>
+                        <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EcknZocO-iFAg8V2SkEP2CgBd05HF8QYPkOVSt8DXhMkOg?e=IH45H8" target="_blank">Link</a></center></td>
+                    </tr>
+                    <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 8</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                        <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EcBQbZXv7fRCkxmHWXWfvxEB5vBLk-ecu5t9jFupyVtwbw?e=1S2wv1" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 8b</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/Eax-8Tcce0REiIhpnweNwDsBro-ZPgMM2m4AQAYVdMuHGA?e=DRDilM" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 9</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ERVdWCaJlXpCuToU92o3j6UBt27UCwiS107IHqU5WS8zUQ?e=Oxy1cW" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 10</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href= "https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EUJLz8OzVBRAmoulSTuzZCkBZ6ogQj4_8jl2RUjqUK6mnQ?e=nKnHUb" target = "_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 11</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EapuLWXlUI1Nn-xhOlQwu4MBGBG7AxFzOJA2GQN8V-qCeA?e=WG1YEa" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 12</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ESb4323XJTdFm6dJIpevHuQBp5tJhbo5QefZMVTPAr5n5Q?e=x2wRbx" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 13</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ERHsfjctY3lHq5atDVGk6R8Bxl5aoA8FMWsKI-gh9LDAsg?e=2W1wQQ" target="_blank">Link</a></center></td>
                     </tr><tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 14</center></td>
-                <td  style="border:1px solid black;padding:10px"><center>*link*</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/Ed6UlDa4UZVFutiSHOU-50QBkaShr9td5OUpmNyC9ebGxw?e=EXn86A" target="_blank">Link</a></center></td>
+                    </tr>
+                    <tr>
+                <td style="border:1px solid black;padding:10px"><center>Lecture 15</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/EQ9-ezB9UadEnyDncmeClHIBHJ86FMuMIrPEI8OrDejsEg?e=GowpWH" target="_blank">Link</a></center></td>
+                    </tr>
+                    <tr>
+                <td style="border:1px solid black;padding:10px"><center>Lecture 16</center></td>
+                    <td  style="border:1px solid black;padding:10px"><center><a href="https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/v2sharda_edu_uwaterloo_ca/ER66q_tkSoVJrXbRVo02i4kBE_38IWED2enysLrWMZao0A?e=8lIy7y" target="_blank">Link</a></center></td>
                     </tr>
                 </table></center>
         
