--- a/Math117.html
+++ b/Math117.html
@@ -125,7 +125,7 @@
             </tr>
             </table></center>
         <br><br><br>
-            <center id = "Course Notes"><table style="width:30%; border:1px solid black;">
+            <!--<center id = "Course Notes"><table style="width:30%; border:1px solid black;">
             <tr>
                 <th style="border:1px solid black; padding:10px">Topics</th>
                 <th style="border:1px solid black; padding:10px">Link</th>
@@ -288,7 +288,7 @@
                 <td style="border:1px solid black;padding:10px"><center>Application of Complex Numbers: Impedence</center></td>
                 <td  style="border:1px solid black;padding:10px"><center>Link</center></td>
             </tr>
-                </table></center>
+                </table></center>-->
     </body>
     
     
