--- a/NE121.html
+++ b/NE121.html
@@ -178,7 +178,7 @@
              </tr>
              <tr>
                 <td style="border:1px solid black;padding:10px"><center>Lecture 16</center></td>
-                <td  style="border:1px solid black;padding:10px"><center><a href = "https://eduuwaterloo-my.sharepoint.com/:b:/r/personal/sshakim_edu_uwaterloo_ca/Documents/NE%20121%20website/Lectures/NE121%20Lec16%20MonOct7.pdf?csf=1&e=qLLntX"
+                <td  style="border:1px solid black;padding:10px"><center><a href = "https://eduuwaterloo-my.sharepoint.com/:b:/g/personal/sshakim_edu_uwaterloo_ca/ESAPatyt_tdAmWuAI_-ZLAQBt3abhhuj-42ICkoP5wqShA?e=6OwpXc"
                      target = "_blank">*link*</a></center></td>
                 
              </tr>
