--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr/>
     <div id = "introduction">
         <p style = "font-family: sans-serif "><strong> Welcome to the first ever Nanotechnology Engineering Student Run Course Website. My name is Vidyansh Sharda or Vid Sharda for short. This website was made by me for the means of helping future Nanotechnology Engineering students with course notes, practice material with solutions and practice lab assignments. It is not meant to be a place to plagiarize from, as you will get caught for sure. I made the site over the winter break and slowly find time to update it. It is not finished currently but is being worked on. Not all the scheduled files have been uploaded as of yet as I have to restrict access to waterloo emails only. The CSS/design of the site is obviously being worked on as well by me, but I am actively recruiting more fellow students to contribute. I appreciate your support and hope you find the experience enjoyable. 
-        
+        <p>PS. The website is best when it is viewed in 90-100% zoom, depending on your browser and screen aspect ratio.</p>
         </p>
         <center>
         <div>
