--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>NanoScribe</title>
-    
+    <link href = "styles.css" rel = "stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     </head>
 <body class = "background">
     
