--- a/first_year.html
+++ b/first_year.html
@@ -50,39 +50,39 @@
               <tbody>
                      <tr>
                             <td>MATH117</td>
-                            <td>Calculus for Engineers - 1</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/math117'">Calculus for Engineers - 1</td>
                             <td>David Harmsworth</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'MATH117.html'">Content</td>
                      </tr>
-                     <tr>
+                     <tr>   
                             <td>NE112</td>
-                            <td>Linear Algebra</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/ne112">Linear Algebra</td>
                             <td>Douglas Harder</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'NE112.html'">Content</td>
                      </tr>
                      <tr>
                             <td>NE111</td>
-                            <td>Programming for Engineers</td>
-                            <td>Not Sure?</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/ne111'">Programming for Engineers</td>
+                            <td>Professor Abu-Kadir</td>
+                            <td onclick="window.location.href = 'NE111.html'">Content</td>
                      </tr>
            <tr>
                             <td>NE121</td>
-                            <td>Chemical Principles</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/ne121'">Chemical Principles</td>
                             <td>Laura Deakin</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'NE121.html'">Content</td>
                      </tr>
            <tr>
                             <td>NE100</td>
-                            <td>Introduction to Nanotechnology</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/ne100'">Introduction to Nanotechnology</td>
                             <td>Ting Tsui</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'NE100.html'">Content</td>
                      </tr>
            <tr>
                             <td>NE109</td>
-                            <td>Societal and Environmental Impacts</td>
+                            <td onclick="window.location.href = 'https://uwflow.com/course/ne109'">Societal and Environmental Impacts</td>
                             <td>Howard Siu</td>
-                            <td>Content</td>
+                            <td onclick="window.location.href = 'NE109.html'">Content</td>
                      </tr>
               </tbody>
        </table>
@@ -102,33 +102,33 @@
                      <tbody>
                             <tr>
                                    <td>MATH119</td>
-                                   <td>Calculus for Engineers - 2</td>
+                                   <td onclick="window.location.href = 'https://uwflow.com/course/ne119'">Calculus for Engineers - 2</td>
                                    <td>Simon Crawford</td>
-                                   <td>Content</td>
+                                   <td onclick="window.location.href = 'MATH119.html'">Content</td>
                             </tr>
                             <tr>
                                    <td>NE131</td>
-                                   <td>Physics</td>
+                                   <td onclick="window.location.href = 'https://uwflow.com/course/ne131'">Physics</td>
                                    <td>Youngki Yoon</td>
-                                   <td>Content</td>
+                                   <td onclick="window.location.href = 'NE131.html'">Content</td>
                             </tr>
                             <tr>
                                    <td>NE113</td>
-                                   <td>Introduction to Computational Methods</td>
+                                   <td onclick="window.location.href = 'https://uwflow.com/course/ne113'">Introduction to Computational Methods</td>
                                    <td>Lena Ahmadi</td>
-                                   <td>Content</td>
+                                   <td onclick="window.location.href = 'NE113.html'">Content</td>
                             </tr>
                   <tr>
                                    <td>NE125</td>
-                                   <td>Introduction Materials Science and Engineering</td>
+                                   <td onclick="window.location.href = 'https://uwflow.com/course/ne125'">Introduction Materials Science and Engineering</td>
                                    <td>Aiping Yu</td>
-                                   <td>Content</td>
+                                   <td onclick="window.location.href = 'NE125.html'">Content</td>
                             </tr>
                   <tr>
                                    <td>NE140</td>
-                                   <td>Linear Circuits</td>
+                                   <td onclick="window.location.href = 'https://uwflow.com/course/ne140'">Linear Circuits</td>
                                    <td>Jhon Saad</td>
-                                   <td>Content</td>
+                                   <td onclick="window.location.href = 'NE140.html'">Content</td>
                             </tr>
                      </tbody>
               </table>
